[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UserInterface/InputControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UserInterface/Ability_Details.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=3]

[node name="Ability_Details" instance=ExtResource( 1 )]
margin_right = -1016.0
margin_bottom = -592.0
script = ExtResource( 2 )

[node name="IconSprite" parent="." index="0"]
position = Vector2( 32, 32 )
scale = Vector2( 0.5, 0.5 )

[node name="KeyboardSprite" parent="." index="2"]
visible = false

[node name="AbilityCost" type="Label" parent="." index="4"]
margin_top = 64.0
margin_right = 128.0
margin_bottom = 102.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.341176, 0.2, 0.2, 1 )
custom_constants/shadow_as_outline = 1
text = "20"
align = 1

[node name="CooldownRemaining" type="Label" parent="." index="5"]
visible = false
margin_left = -8.0
margin_top = 8.0
margin_right = 112.0
margin_bottom = 48.0
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "20"
align = 1

[node name="AbilityName" type="Label" parent="." index="7"]
margin_left = 72.0
margin_right = 262.0
margin_bottom = 38.0
rect_scale = Vector2( 0.75, 0.75 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.341176, 0.2, 0.2, 1 )
text = "ability name"

[node name="AbilityDesc" type="Label" parent="." index="8"]
margin_left = 72.0
margin_top = 32.0
margin_right = 262.0
margin_bottom = 193.0
rect_scale = Vector2( 0.35, 0.35 )
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0.341176, 0.2, 0.2, 1 )
text = "ability name
ability name
ability name
ability name"
